First draft implementation

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	.container
+		.jumbotron
+			h1 Welcome on iFLUX MapBox Viewer
+
+			p
+				| You will be able to visualize maps related to&nbsp;
+				a(href="http://www.iflux.io" target="_blank") iFLUX
+				| &nbsp;projects made for demo.
