--- a/app/views/citizen.jade
+++ b/app/views/citizen.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
 	.flx-map(ng-controller="CitizenMapController")
-		leaflet(class="map" id="map" markers="mapMarkers" defaults="defaults" center="mapCenter")
+		leaflet(class="map" id="map" markers="mapMarkers" legend="legend" defaults="defaults" center="mapCenter")
