Minor asthetic changes

--- a/app/views/citizen.jade
+++ b/app/views/citizen.jade
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-	.flx-map(ng-controller="CitizenMapController")
-		leaflet(class="map" id="map" markers="mapMarkers" legend="legend" defaults="defaults" center="mapCenter")
+    .map-title Citizen Engagement Map
+    .flx-map(ng-controller="CitizenMapController")
+        leaflet(class="map" id="map" markers="mapMarkers" legend="legend" defaults="defaults" center="mapCenter")
