--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -28,9 +28,9 @@ html(lang='en')
 				.navbar-header
 					a.navbar-brand(href="/") iFLUX MapBox Viewer
 				ul.nav.navbar-nav
-					li
+					li(class=isPage('publibike'))
 						a(href="/publibike") Publibike Map
-					li
+					li(class=isPage('citizen'))
 						a(href="/citizen") Citizen Engagement Map
 
 		block content
