--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,3 +52,15 @@ h1, p {
     margin-right: 8px;
     opacity: 0.7;
 }
+
+.archi {
+    margin-top: -20px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.archi > img {
+    flex: 0 0 auto;
+}
