Added the support of reverse proxy configuration less on app side

--- a/app/views/architecture.jade
+++ b/app/views/architecture.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
     .archi
-        img(src='/img/iflux-docker-setup.png')
+        img(src=contextRoot + '/img/iflux-docker-setup.png')
