--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -5,34 +5,34 @@ html(lang='en')
         meta(name='viewport', content='width=device-width')
         title= title
         block css
-            link(rel='stylesheet', href='/css/style.css')
-            link(rel='stylesheet', href='/components/leaflet/dist/leaflet.css')
-            link(rel='stylesheet', href='/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css')
-            link(rel='stylesheet', href='/components/font-awesome/css/font-awesome.css')
-            link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.css')
-            link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap-theme.css')
+            link(rel='stylesheet', href=contextRoot + '/css/style.css')
+            link(rel='stylesheet', href=contextRoot + '/components/leaflet/dist/leaflet.css')
+            link(rel='stylesheet', href=contextRoot + '/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css')
+            link(rel='stylesheet', href=contextRoot + '/components/font-awesome/css/font-awesome.css')
+            link(rel='stylesheet', href=contextRoot + '/components/bootstrap/dist/css/bootstrap.css')
+            link(rel='stylesheet', href=contextRoot + '/components/bootstrap/dist/css/bootstrap-theme.css')
         block js
             if ENV_DEVELOPMENT
                 script(src='http://localhost:35729/livereload.js')
-            script(src='/components/underscore/underscore.js')
-            script(src='/components/leaflet/dist/leaflet.js')
-            script(src='/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js')
-            script(src='/components/jquery/dist/jquery.js')
-            script(src='/components/bootstrap/dist/js/bootstrap.js')
-            script(src='/components/angular/angular.js')
-            script(src='/components/angular-leaflet-directive/dist/angular-leaflet-directive.js')
-            script(src='/js/app.js')
+            script(src=contextRoot + '/components/underscore/underscore.js')
+            script(src=contextRoot + '/components/leaflet/dist/leaflet.js')
+            script(src=contextRoot + '/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js')
+            script(src=contextRoot + '/components/jquery/dist/jquery.js')
+            script(src=contextRoot + '/components/bootstrap/dist/js/bootstrap.js')
+            script(src=contextRoot + '/components/angular/angular.js')
+            script(src=contextRoot + '/components/angular-leaflet-directive/dist/angular-leaflet-directive.js')
+            script(src=contextRoot + '/js/app.js')
     body(ng-app="demoapp")
         nav.navbar.navbar-default.navbar-static-top.navbar-inverse
             .container
                 .navbar-header
-                    a.navbar-brand(href="/") iFLUX MapBox Viewer
+                    a.navbar-brand(href=contextRoot + "/") iFLUX MapBox Viewer
                 ul.nav.navbar-nav
                     li(class=isPage('publibike'))
-                        a(href="/publibike") Publibike Map
+                        a(href=contextRoot + "/publibike") Publibike Map
                     li(class=isPage('citizen'))
-                        a(href="/citizen") Citizen Engagement Map
+                        a(href=contextRoot + "/citizen") Citizen Engagement Map
                     li(class=isPage('archi'))
-                        a(href="/archi") Demo Architecture
+                        a(href=contextRoot + "/archi") Demo Architecture
 
         block content
