--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -22,6 +22,9 @@ html(lang='en')
             script(src=contextRoot + '/components/angular/angular.js')
             script(src=contextRoot + '/components/angular-leaflet-directive/dist/angular-leaflet-directive.js')
             script(src=contextRoot + '/js/app.js')
+
+            script.
+                app.constant('CONTEXT_ROOT', '#{contextRoot}');
     body(ng-app="demoapp")
         nav.navbar.navbar-default.navbar-static-top.navbar-inverse
             .container
