--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,41 +1,40 @@
 doctype html
 html(lang='en')
-    head
-        meta(charset='UTF-8')
-        meta(name='viewport', content='width=device-width')
-        title= title
-        block css
-            link(rel='stylesheet', href=contextRoot + '/css/style.css')
-            link(rel='stylesheet', href=contextRoot + '/components/leaflet/dist/leaflet.css')
-            link(rel='stylesheet', href=contextRoot + '/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css')
-            link(rel='stylesheet', href=contextRoot + '/components/font-awesome/css/font-awesome.css')
-            link(rel='stylesheet', href=contextRoot + '/components/bootstrap/dist/css/bootstrap.css')
-            link(rel='stylesheet', href=contextRoot + '/components/bootstrap/dist/css/bootstrap-theme.css')
-        block js
-            if ENV_DEVELOPMENT
-                script(src='http://localhost:35729/livereload.js')
-            script(src=contextRoot + '/components/underscore/underscore.js')
-            script(src=contextRoot + '/components/leaflet/dist/leaflet.js')
-            script(src=contextRoot + '/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js')
-            script(src=contextRoot + '/components/jquery/dist/jquery.js')
-            script(src=contextRoot + '/components/bootstrap/dist/js/bootstrap.js')
-            script(src=contextRoot + '/components/angular/angular.js')
-            script(src=contextRoot + '/components/angular-leaflet-directive/dist/angular-leaflet-directive.js')
-            script(src=contextRoot + '/js/app.js')
+	head
+		meta(charset='UTF-8')
+		meta(name='viewport', content='width=device-width')
+		title= title
+		block css
+			link(rel='stylesheet', href=contextRoot + '/css/style.css')
+			link(rel='stylesheet', href=contextRoot + '/components/leaflet/dist/leaflet.css')
+			link(rel='stylesheet', href=contextRoot + '/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css')
+			link(rel='stylesheet', href=contextRoot + '/components/font-awesome/css/font-awesome.css')
+			link(rel='stylesheet', href=contextRoot + '/components/bootstrap/dist/css/bootstrap.css')
+			link(rel='stylesheet', href=contextRoot + '/components/bootstrap/dist/css/bootstrap-theme.css')
+		block js
+			if ENV_DEVELOPMENT
+				script(src='http://localhost:35729/livereload.js')
+			script(src=contextRoot + '/components/underscore/underscore.js')
+			script(src=contextRoot + '/components/leaflet/dist/leaflet.js')
+			script(src=contextRoot + '/components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.js')
+			script(src=contextRoot + '/components/jquery/dist/jquery.js')
+			script(src=contextRoot + '/components/bootstrap/dist/js/bootstrap.js')
+			script(src=contextRoot + '/components/angular/angular.js')
+			script(src=contextRoot + '/components/ui-router/release/angular-ui-router.js')
+			script(src=contextRoot + '/components/angular-leaflet-directive/dist/angular-leaflet-directive.js')
+			script(src=contextRoot + '/js/app.js')
 
-            script.
-                app.constant('CONTEXT_ROOT', '#{contextRoot}');
-    body(ng-app="demoapp")
-        nav.navbar.navbar-default.navbar-static-top.navbar-inverse
-            .container
-                .navbar-header
-                    a.navbar-brand(href=contextRoot + "/") iFLUX MapBox Viewer
-                ul.nav.navbar-nav
-                    li(class=isPage('publibike'))
-                        a(href=contextRoot + "/publibike") Publibike Map
-                    li(class=isPage('citizen'))
-                        a(href=contextRoot + "/citizen") Citizen Engagement Map
-                    li(class=isPage('archi'))
-                        a(href=contextRoot + "/archi") Demo Architecture
+			script.
+				app.constant('CONTEXT_ROOT', '#{contextRoot}');
+	body(ng-app="demoapp")
+		nav.navbar.navbar-default.navbar-static-top.navbar-inverse
+			.container
+				.navbar-header
+					a.navbar-brand(ui-sref="main") iFLUX MapBox Viewer
+				ul.nav.navbar-nav
+					li
+						a(ui-sref='archi') Demo Architecture
 
-        block content
+		div(ui-view)
+		//block content
+
