--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang='en')
 	head
+		base(href=contextRoot + '/')
 		meta(charset='UTF-8')
 		meta(name='viewport', content='width=device-width')
 		title= title
