--- a/app/views/partials/architecture.jade
+++ b/app/views/partials/architecture.jade
@@ -3,17 +3,17 @@
 	div
 		.descr-container
 			.descr-item
-				h4.descr-item-heading iFLUX Events API #[a(href='/api/v1/events') /api/v1/events]
+				h4.descr-item-heading iFLUX Events API #[a(href='https://api.iflux.heig-vd.ch/v1/events') /v1/events]
 				p.descr-item-text Send events to iFLUX.
 			.descr-item
-				h4.descr-item-heading iFLUX API #[a(href='/api/v1') /api/v1/]
+				h4.descr-item-heading iFLUX API #[a(href='https://api.iflux.heig-vd.ch/v1') /v1/]
 				p.descr-item-text Use iFLUX API to create action targets, event sources, rules and more.
 			.descr-item
 				h4.descr-item-heading iFLUX API Doc #[a(href='/doc') /doc]
 				p.descr-item-text Read the iFLUX API documentation to learn how to use the iFLUX API.
 			.descr-item
-				h4.descr-item-heading Citizen Backend #[a(href='/citizen') /citizen]
-				p.descr-item-text Use the Citizen Backend API to create and manage issues. This will send events to iFLUX. Therefore, you will be able to visualize some results in the ViewBox.
+				h4.descr-item-heading Citizen Backend /citizen]
+				p.descr-item-text Use the Citizen Backend API to create and manage issues. This will send events to iFLUX. Therefore, you will be able to visualize some results in the ViewBox. Only an API is available for this component.
 			.descr-item
 				h4.descr-item-heading Metrics #[a(href='/metrics') /metrics]
 				p.descr-item-text The metrics component is an action target which receive events transformed to collect several metrics. The metrics are presented in simple graphs.
