--- a/app/views/partials/architecture.jade
+++ b/app/views/partials/architecture.jade
@@ -4,45 +4,62 @@
 		.descr-container
 			.descr-item
 				h4.descr-item-heading iFLUX Events API #[a(href='https://api.iflux.heig-vd.ch/v1/events') /v1/events]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-api-gateway-node' target='_blank') iflux-api-gateway-node]
 				p.descr-item-text Send events to iFLUX.
 			.descr-item
 				h4.descr-item-heading iFLUX API #[a(href='https://api.iflux.heig-vd.ch/v1') /v1/]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-server-node' target='_blank') iflux-server-node]
 				p.descr-item-text Use iFLUX API to create action targets, event sources, rules and more.
 			.descr-item
 				h4.descr-item-heading iFLUX API Doc #[a(href='/doc') /doc]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-apidoc' target='_blank') iflux-apidoc]
 				p.descr-item-text Read the iFLUX API documentation to learn how to use the iFLUX API.
 			.descr-item
-				h4.descr-item-heading Citizen Backend /citizen]
+				h4.descr-item-heading iFLUX Frontend #[a(href='/fe') /fe]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-frontend' target='_blank') iflux-api-frontend]
+				p.descr-item-text Frontend to manage the iFLUX rules, targets and sources.
+			.descr-item
+				h4.descr-item-heading Citizen Backend /citizen
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/Teaching-HEIGVD-CM_WEBS-2015-Labo-Express-Impl' target='_blank') citizen-engagement]
 				p.descr-item-text Use the Citizen Backend API to create and manage issues. This will send events to iFLUX. Therefore, you will be able to visualize some results in the ViewBox. Only an API is available for this component.
 			.descr-item
 				h4.descr-item-heading Metrics #[a(href='/metrics') /metrics]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-metrics-action-target' target='_blank') iflux-metrics-action-target]
 				p.descr-item-text The metrics component is an action target which receive events transformed to collect several metrics. The metrics are presented in simple graphs.
 			.descr-item
 				h4.descr-item-heading Slack Gateway #[a(href='/slack') /slack]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-slack-gateway' target='_blank') iflux-slack-gateway]
 				p.descr-item-text Slack is a messaging system especially done for enterprise world. The integration done in iFLUX allow to send notifications to specific channels. By default, this integration is not active as there is a cost to send more than 10k messages.
 			.descr-item
 				h4.descr-item-heading Viewbox #[a(href='/viewbox') /viewbox]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-mapbox-viewer' target='_blank') iflux-mapbox-viewer]
 				p.descr-item-text The viewbox uses MapBox to offer a map visualization of the Citizen Backend events. There is also a visualization offered for the Publibike events received.
 			.descr-item
 				h4.descr-item-heading Kibana #[a(href='/kibana') /kibana]
+				p.descr-item-text on GitHub: #[a(href='https://github.com/elastic/kibana' target='_blank') elastic/kibana]
 				p.descr-item-text Kibana let you browse and discover the data recorded in Elastic Search from iFLUX. Currently, we have all the events stored. The events matched by a rule are also stored with the matching details.
 			.descr-item
 				h4.descr-item-heading Redirection to: #[a(href='/viewbox/archi') /viewbox/archi]
 				p.descr-item-text Any other request is redirected to this page.
 			.descr-item
 				h4.descr-item-heading Publibike Polling
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-publibike-event-source' target='_blank') iflux-publibike-event-source]
 				p.descr-item-text This component periodically poll Publibike service to gather the data of the bike stations to know how many bikes and holders remain at the station.
 			.descr-item
 				h4.descr-item-heading Citizen Engagement Simulator
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/citizen-engagement-simulator' target='_blank') citizen-engagement-simulator]
 				p.descr-item-text To simulate Citizen Engagement activity, a script is prepared with random data generation.
 			.descr-item
 				h4.descr-item-heading Kafka + Zookeeper
+				p.descr-item-text on GitHub: #[a(href='https://github.com/apache/kafka' target='_blank') apache/kafka]
 				p.descr-item-text A bus messaging system is in place to forward the events received on the iFLUX API Gateway to iFLUX server.
 			.descr-item
 				h4.descr-item-heading ElasticSearch
+				p.descr-item-text on GitHub: #[a(href='https://github.com/elastic/elasticsearch' target='_blank') elastic/elasticsearch]
 				p.descr-item-text This data storage allow to do text searches and much more on the data that iFLUX stores.
 			.descr-item
 				h4.descr-item-heading Reverse Proxy (RP)
+				p.descr-item-text on GitHub: #[a(href='https://github.com/SoftEng-HEIGVD/iflux-docker' target='_blank') iflux-docker]
 				p.descr-item-text This component consolidates all the services behind him to easily deploy the whole infrastructure locally through Docker.
 
 
